<?xml version="1.0"?>
<package format="3">
  <name>bmi270_driver</name>
  <version>0.0.1</version>
  <description>Wrapper for Bosch BMI270 Sensor API</description>
  <maintainer email="ludo@email.com">ludo</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>

